Resolve PM20-454 - Notification Module
