# api/urls.py
@@ -8,6 +8,7 @@ from inquiries.api.urls import urlpatterns as inquiries_urls
 from profiles.api.urls import urlpatterns as profiles_urls
 from roles.api_urls import urlpatterns as roles_urls
 from users.api.urls import urlpatterns as users_urls
+from notifications.api.urls import urlpatterns as notifications_urls
 
 app_name = "api"
 
@@ -19,6 +20,7 @@ urlpatterns = [
     url(r"^features/", include((features_urls, "features"))),
     url(r"^events/", include((events_urls, "events"))),
     url(r"^inquiries/", include((inquiries_urls, "inquiries"))),
+    url(r"^notifications/", include((notifications_urls, "notifications"))),
     url(
         r"^countries/",
         views.LocaleDataView.as_view({"get": "list_countries"}),
