# notifications/api/urls.py
@@ -1,0 +1,20 @@
+from django.urls import path
+from rest_framework import routers
+
+from notifications.api import view
+
+router = routers.SimpleRouter(trailing_slash=False)
+
+
+urlpatterns = [
+    path(
+        r"<uuid:profile_uuid>",
+        view.UserNotificationView.as_view({"get": "get_notifications"}),
+        name="get-user-notifications",
+    ),
+    path(
+        "<uuid:profile_uuid>/<int:notification_id>/",
+        view.UserNotificationView.as_view({"patch": "mark_as_read"}),
+        name="mark-notification-read",
+    ),
+]
